--- a/maggio.html
+++ b/maggio.html
@@ -30,12 +30,17 @@
 <section><br>
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 <h3><big><strong>MAGGIO</strong></big></h3><br><br><br>
-<p><big><strong>6 maggio 1807</strong>: nacque a Vignola <strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante e armatore.<br><br>
-Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola, ma lasciò ben presto il paese natale per esercitare il commercio nell’area mediterranea. Imparato l’arabo, ebbe notevoli esperienze nel campo della diplomazia internazionale (in Algeria, fra l’altro, ricoprì anche la carica di console degli Stati Uniti d’America).<br>
-In età matura, il nostro personaggio fu per alcuni anni proprietario vaporetti che collegavano Napoli e Ischia. All’epoca, egli risiedeva su quell’isola, e precisamente nella villa che assunse il suo cognome e che ora è maggiormente nota come Palazzo D’Ambra.<br>
-Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1745-1822), e lo fece giungere alla sorella Luigia (1796-1870), appena rimasta vedova di Giambattista Bellucci (1781-1866), uno degli uomini più stimati e ricchi della Vignola ottocentesca.<br>
-Non conosciamo né la data né il luogo della scomparsa di Garavini.<br><br>  
-Nell’immagine qui sotto, il Palazzo D’Ambra (già Villa Garavini), in una fotografia recente. Fonte: google.com</big></p><br><br>
+<p><big><strong>6 maggio 1807</strong>: nacque a Vignola <strong>CARLO GARAVINI</strong>, diplomatico, viaggiatore, avventuriero, commerciante, geografo e armatore.<br><br> 
+
+Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Carlo Garavini trascorse l’infanzia a Vignola, ma lasciò ben presto il paese natale per esercitare il commercio in alcuni Paesi del Mediterraneo. Imparato l’arabo e diversi dialetti locali, ebbe significative esperienze nel campo della diplomazia internazionale (in Algeria, fra l’altro, fu incaricato d’affari dell’emiro e console degli Stati Uniti d’America) e compì esplorazioni che gli consentirono non solo di venire a conoscenza di usi e costumi di varie popolazioni dell’Africa settentrionale e del Vicino Oriente, ma anche di inviare ad alcuni musei crani beduini e vari reperti, e di rettificare alcuni errori commessi dai geografi.<br>
+
+In età matura, il nostro personaggio – fra l’altro – fu per qualche tempo proprietario vaporetti che collegavano Napoli e Ischia. All’epoca, egli risiedeva su quell’isola, e precisamente nella magnifica villa che assunse il suo cognome e che ora è maggiormente nota come Palazzo D’Ambra.<br> 
+
+Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1747-1822), e lo fece giungere alla sorella Luigia (1796-1870), appena rimasta vedova di Giambattista Bellucci (1781-1866), uno degli uomini più stimati e ricchi della Vignola ottocentesca.<br>
+
+Non conosciamo né la data né il luogo della scomparsa di Garavini, ma sicuramente non è anteriore al 1874.<br><br> 
+
+Nell’immagine qui sotto, una foto recente del Palazzo D’Ambra (già Villa Garavini), a Ischia.</big></p><br><br>
 <img src="img/celebri vignolesi/Garavini Carlo/palazzo Ambra.jpg" width="850" height="600"><br><br><br>
 <big><strong><big><center>Vuoi saperne di più su Carlo Garavini?<br>Allora, visita il suo <a href="Garavini.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></center></strong><br><br><br>
 
