--- a/Garavini.html
+++ b/Garavini.html
@@ -39,7 +39,7 @@ Nato in una famiglia di commercianti il cui ceppo antico proveniva dalla comunit
 
 Lontano parente di <strong>Francesco Selmi</strong> (1817-1881), Garavini fu il dedicatario della prima fatica editoriale del futuro illustre scienziato, letterato, patriota e funzionario pubblico nato anch’egli a Vignola, cioè la cura dell’<i>Iconografia dei celebri vignolesi</i> (1839).<br>  
 
-Molto giovane, Garavini cominciò a dedicarsi ai viaggi, ai commerci e alla diplomazia internazionale soprattutto nei territori che si affacciano sul Mediterraneo. In Algeria, fu console degli Stati Uniti d’America (grado che, con il consenso del Senato, gli venne conferito nel 1835 dal presidente Andrew Jackson [1767-1845], al potere dal 1829 al 1837) e <i>oukil</i> (incaricato dell’emiro Abd-el-Kader (1808-1883), il quale lo nominò anche suo rappresentante presso le autorità francesi ad Algeri, al punto che il nostro personaggio finì con il rivestire un ruolo di primo piano nelle trattative che portarono alla firma del cruciale trattato della Tafna (1837) tra la Francia e l’Emirato di Abd-el-Kader.<br>  
+Molto giovane, Garavini cominciò a dedicarsi ai viaggi, ai commerci e alla diplomazia internazionale soprattutto nei territori che si affacciano sul Mediterraneo. In Algeria, fu console degli Stati Uniti d’America (grado che, con il consenso del Senato, gli venne conferito nel 1835 dal presidente Andrew Jackson [1767-1845], al potere dal 1829 al 1837) e <i>oukil</i> (incaricato d'affari) dell’emiro Abd-el-Kader (1808-1883), il quale lo nominò anche suo rappresentante presso le autorità francesi ad Algeri, al punto che il nostro personaggio finì con il rivestire un ruolo di primo piano nelle trattative che portarono alla firma del cruciale trattato della Tafna (1837) tra la Francia e l’Emirato di Abd-el-Kader.<br>  
 
 Negli anni, Garavini moltiplicò le proprie esplorazioni in numerose aree dell’Africa settentrionale e del Vicino Oriente: ciò gli permise di approfondire gli usi e costumi delle popolazioni locali, d’imparare bene l’arabo e un certo numero di lingue e dialetti indigeni, di spedire ad alcuni musei crani beduini e vari reperti, nonché di rettificare alcuni errori commessi dai geografi.<br>  
 
@@ -55,7 +55,7 @@ Garavini aveva anche un fratello minore, Barlamo, del quale non si sa molto: era
 
 Nel 1867 Garavini, appassionato d’arte, riuscì a rintracciare e ad acquistare il disperso <i>Autoritratto</i> di <strong>Giuseppe Maria Soli</strong> (1745-1822), illustre architetto e pittore vignolese, e lo fece giungere alla sorella appena rimasta vedova. Quest’opera, che risale all’età matura dell’artista (di sicuro, venne dipinta non prima del 1805), risulta a tutt’oggi custodita nel suddetto Casino ed è stata restaurata nel 2015.<br> 
 
-Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (nel 1874, però, egli risultava sicuramente in vita; esistono molte probabilità che lo fosse ancora nel 1880; forse lo era anche nel 1885)..</big></p><br><br><br>
+Allo stato attuale degli studi, non siamo al corrente né della data né del luogo della morte di Garavini (nel 1874, però, egli risultava sicuramente in vita; esistono molte probabilità che lo fosse ancora nel 1880, e forse lo era anche nel 1885).</big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><center><big><big>Palazzo d’Ambra (già Villa Garavini) a Ischia, immagine risalente al 1970 circa. Fonte: google.com</center><big></big></p>
