--- a/Barozzi.html
+++ b/Barozzi.html
@@ -17,8 +17,8 @@
 <h1><img src="img/logo sito.jpg" width="150" height="100">CELEBRI VIGNOLESI</h1>	
 <nav>
 <ul>
-<strong><li><a href="homepage.html">HOME</a></li>
-<li><a href="Chi siamo.html">CHI SIAMO?</a></li>
+<strong><li><a href="index.html">HOME</a></li>
+<li><a href="Chi siamo.html">CHI SIAMO</a></li>
 <li><a href="Novità.html">NOVITÀ</a></li>
 <li class="active"><a href="Celebri Vignolesi.html">CELEBRI VIGNOLESI</a></li>
 <li><a href="Anniversari.html">ANNIVERSARI</a></li>
@@ -41,7 +41,7 @@ Tra i numerosi impegni che contraddistinsero il culmine della carriera professio
 Nella città natale, Barozzi verosimilmente partecipò, se non altro offrendo la propria consulenza, alla realizzazione del Palazzo Contrari (iniziato nel 1560) e - soprattutto - della scala elicoidale autoportante costruita al suo interno.<br>
 Alcune delle imprese architettoniche del nostro personaggio videro la collaborazione del figlio Giacinto (1533/1534 - non prima del 1584), anch’egli conosciuto con il soprannome toponimo del padre, sebbene, a differenza del genitore, non vantasse natali vignolesi.
 Barozzi si procurò fama d’insigne trattatista a livello internazionale grazie ai seguenti libri: <i>Regola delli cinque ordini d’architettura</i> (1562), ove viene delineato il concetto di ordine architettonico; <i>Due Regole della prospettiva pratica</i> (1583, postumo, a cura del celebre scienziato ed ecclesiastico Egnazio Danti [1536-1586]). Nel corso del tempo, entrambe le opere furono ristampate parecchie volte e la <i>Regola</i> arrivò a contare anche diverse edizioni in lingua straniera.<br>
-Il <i>Vignola</i> morì a Roma il 7 luglio 1573 (calendario giuliano). Venne sepolto nel Pantheon.<br>
+Il <i>Vignola</i> morì a Roma il 7 luglio 1573 (calendario giuliano). Venne inumato nel Pantheon; ora non è più presente l'indicazione del punto esatto della sepoltura.<br>
 Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Primaria e una via del centro storico.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Facciata del Palazzo Farnese a Caprarola (VT). Fonte: google.com</center></big><br>
