--- a/Barozzi.html
+++ b/Barozzi.html
@@ -46,6 +46,8 @@ Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Prim
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 <p><big><big><center>Facciata del Palazzo Farnese a Caprarola (VT). Fonte: google.com</center></big><br>
 	<img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="900" height="600"></p><br>
+<p><big><big><center>Il Palazzo dei Banchi di Bologna, sul lato orientale della Piazza Maggiore.<br> La facciata del portico venne eseguita fra il 1565 e il 1568 su progetto di Barozzi. Fonte: google.com</center></big><br>
+	<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"></p><br>			
 	<p><big><center>Frontespizio della prima edizione della <i>Regola delli cinque ordini d’architettura</i> (1583). Fonte: google.com</center></big></p>
 		<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
