--- a/Barozzi.html
+++ b/Barozzi.html
@@ -41,14 +41,14 @@ Tra i numerosi impegni che contraddistinsero il culmine della carriera professio
 Nella città natale, Barozzi verosimilmente partecipò, se non altro offrendo la propria consulenza, alla realizzazione del Palazzo Contrari (iniziato nel 1560) e - soprattutto - della scala elicoidale autoportante costruita al suo interno.<br>
 Alcune delle imprese architettoniche del nostro personaggio videro la collaborazione del figlio Giacinto (1533/1534 - non prima del 1584), anch’egli conosciuto con il soprannome toponimo del padre, sebbene, a differenza del genitore, non vantasse natali vignolesi.
 Barozzi si procurò fama d’insigne trattatista a livello internazionale grazie ai seguenti libri: <i>Regola delli cinque ordini d’architettura</i> (1562), ove viene delineato il concetto di ordine architettonico; <i>Due Regole della prospettiva pratica</i> (1583, postumo, a cura del celebre scienziato ed ecclesiastico Egnazio Danti [1536-1586]). Nel corso del tempo, entrambe le opere furono ristampate parecchie volte e la <i>Regola</i> arrivò a contare anche diverse edizioni in lingua straniera.<br>
-Il <i>Vignola</i> morì a Roma il 7 luglio 1573 (calendario giuliano). Venne inumato nel Pantheon; ora non è più presente l'indicazione del punto esatto della sepoltura.<br>
+<i>Il Vignola</i> morì a Roma il 7 luglio 1573 (calendario giuliano). Venne inumato nel Pantheon; ora non è più presente l'indicazione del punto esatto della sepoltura.<br>
 Nel suo paese natale, risultano attualmente intitolate a Barozzi una Scuola Primaria e una via del centro storico.</big></p><br><br><br>
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
-<p><big><center>Il Palazzo dei Banchi di Bologna, sul lato orientale della Piazza Maggiore.<br> La facciata del portico venne eseguita fra il 1565 e il 1568 su progetto di Barozzi. Fonte: google.com</center></big><br>
+<p><big><big><center>Il Palazzo dei Banchi di Bologna, sul lato orientale della Piazza Maggiore.<br> La facciata del portico venne eseguita fra il 1565 e il 1568 su progetto di Barozzi. Fonte: google.com</center></big><br>
 	<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"></p><br>
-<p><big><center>Facciata del Palazzo Farnese a Caprarola (VT). Fonte: google.com</center></big><br>
+<p><big><big><center>Facciata del Palazzo Farnese a Caprarola (VT). Fonte: google.com</center></big><br>
 	<img src="img/celebri vignolesi/Barozzi/facciata.jpg" width="900" height="600"></p><br>
-<p><big><center>Frontespizio della prima edizione della <i>Regola delli cinque ordini d’architettura</i> (1583). Fonte: google.com</center></big></p>
+<p><big><big><center>Frontespizio della prima edizione della <i>Regola delli cinque ordini d’architettura</i> (1583). Fonte: google.com</center></big></p>
 		<img src="img/celebri vignolesi/Barozzi/regola.jpg" width="500" height="650"></p><br><br><br>
 <p><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></strong></center></p>
 </section>
