--- a/Novità.html
+++ b/Novità.html
@@ -29,12 +29,12 @@
 <h2><big>NOVITÀ</big></h2><br><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">31 gennaio 2022</span></big></big></p><br><br>
-<p><big>Ritratto di fantasia di Lodovico Antonio Muratori, litografia di Domenico Simonini (2021).<br> L'opera è stata eseguita per l'associazione Amici dell'Arte Vignola.</big></p><br>
-<img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br>
+<p><big>Ritratto di fantasia di Lodovico Antonio Muratori, litografia di Domenico Simonini (2021). L'opera è stata eseguita per l'associazione Amici dell'Arte Vignola.</big></p><br>
+<img src="img/FOTO VARIE/Pippo.jpg" width="500" height="750"><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">29 gennaio 2022</span></big></big></p><br><br>
 <p><big>Il Palazzo dei Banchi di Bologna, sul lato orientale della Piazza Maggiore. La facciata del portico venne eseguita fra il 1565 e il 1568 su progetto di Barozzi. Fonte: google.com</big></p><br>
-<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"><br><br>
+<img src="img/celebri vignolesi/Barozzi/portico.jpg" width="800" height="600"><br><br><br>
 	
 <p><big><big><span style="text-decoration: underline;">23 gennaio 2022</span></big></big></p><br><br>
 <p><big>Qui sotto, un breve video girato nei giorni scorsi all’interno di Santa Maria della Pomposa, chiesa modenese della quale Muratori fu proposto dal 1716 al 1733.</big><br>
