--- a/Neri2.html
+++ b/Neri2.html
@@ -28,18 +28,25 @@
 </header>
 <section>
 	<p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br><br>
-	<p><center><strong><big><big><big><big><span style="text-decoration: underline;">LA PAGINA È ATTUALMENTE IN COSTRUZIONE</span></big></big></big></big></strong></p><br><br><br>
+	
 <h3><center><big><big>NÈTTORE NERI</big></big><br><br>
 	<big>(1883-1970)</big></center></h3><br><br><br>
 	<h4><big><big><big><big><strong><center>PROFILO BIOGRAFICO</center></strong></big></big></big></big></h4><br><br>
 	
+<p><big><strong>NÈTTORE NERI</strong>, magistrato e poeta, nacque a Barbiano di Cotignola (nel Ravennate) il 27 gennaio 1883.<br><br> 
 
+Figlio di Raffaele, commerciante di vini, e Amalia Ravaglia, Nèttore Neri si trasferì con la famiglia a Imola quando era ancora molto piccolo: lì frequentò le Scuole Elementari. In seguito, studente svogliato ma con il cuore e la mente rivolti alla letteratura, fu a Modena per il Ginnasio e il Liceo; l’ultimo anno, egli passò come esterno al Liceo Torricelli di Faenza, ove ottenne la Maturità Classica. Nel luglio 1908, all’Università di Bologna, discusse una tesi di laurea in Giurisprudenza dal titolo Minorenni delinquenti e traviati in Italia e poi intraprese la professione di avvocato. 
+Neri combatté nella Prima Guerra Mondiale come ufficiale di fanteria con il grado di tenente e, nel 1917, fu ricoverato per un periodo all’ospedale militare di Ravenna, durante il quale conobbe il giovanissimo pittore e poeta futurista ravennate – ma veronese d’adozione – Giorgio Ferrante (1898-1990), amico di Umberto Boccioni (1882-1916).<br>
+Il nostro personaggio nel 1920 entrò in Magistratura. Esercitò per un quadriennio vari uffici in diverse località emiliano-romagnole, poi diventò pretore di Vignola, incarico che ricoprì dal 1924 al 1953, anno del pensionamento. Ambientatosi subito molto bene nella comunità di quel paese, forse anche aiutato in questo dalla presenza di una folta colonia romagnola stabilitasi in loco al seguito del conte Edoardo Martuzzi († 1914), anch’egli originario di Cotignola, il quale nel 1893 aveva acquistato dai Rangoni la splendida dimora in collina che i Vignolesi del Novecento e di oggi conoscono come Villa Martuzzi (o, anche, Villa Martuzzi Ripandelli). Neri fu sempre legatissimo al suo paese d’adozione e continuò ad abitarvi fino alla morte, avvenuta il 24 giugno 1970 (in alcune sedi, sbagliando, si posticipa la data di un giorno); venne tumulato nel camposanto di Vignola, all’interno della cappella di famiglia.<br>
+Per tutta la vita, il personaggio di cui stiamo parlando coltivò con passione le belle lettere e rapporti, anche epistolari, con alcune importanti figure del mondo letterario e artistico. Si procurò una più che discreta fama soprattutto grazie a raccolte di versi in dialetto romagnolo, assai apprezzate fino ai nostri giorni da studiosi di vaglia e da altri poeti (fra i suoi estimatori, figurano Pier Paolo Pasolini [1922-1975], che con lui ebbe un carteggio, e Giuseppe Bellosi [n. 1954]).<br>
+Era il padre di <strong>Attilio Neri</strong> (1921-2009).<br>
+A Nèttore Neri sono attualmente intitolate la Biblioteca Comunale di Barbiano e, nella stessa località, una strada.</strong></big></p><br><br><br>
 
 <h5><big><big><big><big><strong><center>IMMAGINI</center></strong></big></big></big></big></big></h5><br><br>
 
 <p><big><strong><a href="Celebri Vignolesi.html">Indice dei nomi</a></big></strong></p><br>
 </section>
-<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022- CELEBRI VIGNOLESI<br>
+<footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
 <i class="fab fa-instagram"></i>&nbsp; <a href="https://www.instagram.com/celebri_vignolesi/?hl=it">celebri_vignolesi</a>&nbsp;&nbsp;&nbsp;<i class="fab fa-facebook"></i> &nbsp;<a href="https://www.facebook.com/Celebri-Vignolesi-103269268827528/?ref=page_internal">Celebri Vignolesi</a><br>
 E-mail: <a href= "mailto:celebrivignolesi@hotmail.com">celebrivignolesi@hotmail.com</a><br>
 Editor: Sara Scaglioni 
