--- a/febbraio.html
+++ b/febbraio.html
@@ -76,15 +76,16 @@ Ugo Roli iniziò la sua carriera lavorativa come maestro elementare. In seguito,
 
 Roli partecipò alla Prima Guerra Mondiale in qualità di ufficiale di Stato Maggiore e fece numerose esperienze in prima linea. Nel corso del conflitto, vergò interessanti lettere (edite nel 1933) e venne decorato – fra l’altro – con la Medaglia d’Argento al Valor Militare.<br>  
 
-Nel 1919 questo personaggio fu uno dei fondatori del “Circolo Amicizia” di Vignola, sodalizio che trovò sede all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – con maggiore esattezza – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi). Ne diventò il primo presidente.<br>
+Nel 1919 questo personaggio fu uno dei fondatori del “Circolo Amicizia” di Vignola, sodalizio che trovò sede all’interno di quello che all’epoca veniva denominato Palazzo Boncompagni (o – a essere più esatti – Palazzo Boncompagni Ludovisi, edificio oggigiorno noto – alternativamente – come Palazzo Contrari Boncompagni oppure come – con espressione impropria – Palazzo Barozzi). Ne diventò il primo presidente.<br>
 
 In vita, non solo nel suo paese natale, Roli era apprezzato soprattutto come solerte cultore di memorie patrie, attento studioso di storia locale e provetto verseggiatore. La sua fama di valente e ingegnoso poeta dialettale resiste ancora oggi.<br>  
 
-Roli morì a Vignola il 25 giugno 1959 e fu sepolto nel camposanto cittadino.<br><br>
+Il nostro personaggio morì a Vignola il 25 giugno 1959 e fu sepolto nel camposanto cittadino.<br><br>
 
 Nell’immagine qui sotto, frontespizio di <i>Faléster dl’Inféren</i> (1951), opera in versi (dialettali e italiani) di Ugo Roli.</big></p><br>
 		<center><img src="img/celebri vignolesi/Roli Ugo/libro.jpg" width="500" height="700"></center><br><br><br>
 <p><strong><big><big><center>Vuoi saperne di più su Ugo Roli?<br>Allora, visita il suo <a href="Roli.html">profilo personale</a> nella sezione <a href="Celebri Vignolesi.html">Celebri Vignolesi</a>!</big></big></center></strong></p><br><br><br>
+
 <p><big><strong><a href="Anniversari.html">Indice dei mesi</a></big></strong></center></p><br><br>
 </section>
 <footer><i class="far fa-copyright">&nbsp;</i> Copyright 2021, 2022 - CELEBRI VIGNOLESI<br>
